--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
  <html>
  	<head>
  		<title>A whale of a greeting</title>
- 	</head> 
+ 	</head>
  	<body>
   		<h1>hello, world</h1>
- 		<p>Call me Hasan.</p>
+      <img src="images/breaching_whale.jpg" alt="Description">
+    <p>Call me Hasan.</p>
  	</body>
  </html>
